syntax = "proto3";

package rivet.backend.pkg.email_verification.create;

import "proto/common.proto";

message Request {
	string email = 1;
	optional rivet.common.Uuid game_id = 2;
}

message Response {
	rivet.common.Uuid verification_id = 1;
}
